// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`interaction snapshots > Enter selects the highlighted task and opens edit TUI 1`] = `
"                                                                                
  Edit Task MRKL-001                                                            
  ────────────────────────────────────────────────────────────                  
› Type            ◂ feat ▸                                                      
  Status            todo                                                        
  Priority          ⏫ 5-highest                                                 
  Title           Auth epic                                                     
  Description     ····················                                          
  Parent          type to search...                                             
  + Block         type to search...                                             
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/status/priority  Ctrl+N newline  Enter submit  Esc 
quit                                                                            "
`;

exports[`interaction snapshots > Tab key switches between Tasks and Archive 1`] = `
" Tasks   [Archive]                                                              
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    PRI TITLE                          │ Preview              
────────────────────────────────────────────┼───────────────────────────────────
MRKL-099    closed    ⏹️  Old feature                    │ MRKL-099 feat closed  
                                            │   ⏹️ Priority: 3-normal            
                                            │ Old feature                       
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
1/1 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`interaction snapshots > arrow down moves selection to next task 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    PRI TITLE                          │ Preview              
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo      ⏫   Auth epic                      │ MRKL-002 fix in-progr
ess                                                                             
MRKL-002    in-progre…🔼  Fix login bug                  │   🔼 Priority: 4-high  
MRKL-003    todo      🔽  Auth tests                     │ Fix login bug         
MRKL-004    done      ⏹️  Update CI config               │                       
MRKL-005    todo      ⏹️  Dashboard layout               │                       
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`interaction snapshots > arrow up moves selection back to previous task 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    PRI TITLE                          │ Preview              
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo      ⏫   Auth epic                      │ MRKL-001 feat todo   
MRKL-002    in-progre…🔼  Fix login bug                  │   ⏫ Priority: 5-highes
t                                                                               
MRKL-003    todo      🔽  Auth tests                     │ Auth epic             
MRKL-004    done      ⏹️  Update CI config               │                       
MRKL-005    todo      ⏹️  Dashboard layout               │                       
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`interaction snapshots > initial render shows task list with first item selected 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    PRI TITLE                          │ Preview              
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo      ⏫   Auth epic                      │ MRKL-001 feat todo   
MRKL-002    in-progre…🔼  Fix login bug                  │   ⏫ Priority: 5-highes
t                                                                               
MRKL-003    todo      🔽  Auth tests                     │ Auth epic             
MRKL-004    done      ⏹️  Update CI config               │                       
MRKL-005    todo      ⏹️  Dashboard layout               │                       
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`interaction snapshots > typing characters filters the task list 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    PRI TITLE                          │ Preview              
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo      ⏫   Auth epic                      │ MRKL-001 feat todo   
MRKL-002    in-progre…🔼  Fix login bug                  │   ⏫ Priority: 5-highes
t                                                                               
MRKL-003    todo      🔽  Auth tests                     │ Auth epic             
MRKL-004    done      ⏹️  Update CI config               │                       
MRKL-005    todo      ⏹️  Dashboard layout               │                       
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`render snapshots > archive tab active snapshot at 80 cols 1`] = `
" Tasks   [Archive]                                                              
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    PRI TITLE                          │ Preview              
────────────────────────────────────────────┼───────────────────────────────────
MRKL-020    closed    ⏹️  Archived feature               │ MRKL-020 feat closed  
MRKL-021    done      ⏹️  Old bugfix                     │   ⏹️ Priority: 3-normal
                                            │ Archived feature                  
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
2/2 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`render snapshots > basic task list snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    PRI TITLE                          │ Preview              
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo      ⏫   Add user authentication        │ MRKL-001 feat todo   
├─MRKL-004    todo      🔽  Design dashboard layout        │   ⏫ Priority: 5-high
est                                                                             
MRKL-002    in-progre…🔼  Fix login redirect bug         │ Add user authenticatio
n                                                                               
MRKL-003    done      ⏹️  Update CI pipeline config      │                       
MRKL-005    in-progre…⏬   Refactor token validation      │ Relationships        
MRKL-006    todo      ⏹️  Write integration tests        │   Children: MRKL-004  
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────"
`;

exports[`render snapshots > blocking indicators snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    PRI TITLE                          │ Preview              
────────────────────────────────────────────┼───────────────────────────────────
MRKL-010    todo      ⏫   🚧 MRKL-011, MRKL-01…Database migration             │ M
RKL-010 feat todo                                                               
MRKL-011    todo      🔼  🛑 MRKL-01…API endpoints                  │   ⏫ Priority
: 5-highest                                                                     
MRKL-012    todo      ⏹️  🛑 MRKL-01…Frontend integration           │ Database mig
ration                                                                          
                                            │                                   
                                            │ Relationships                     
                                            │   Blocks: MRKL-011, MRKL-012      
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   "
`;

exports[`render snapshots > empty task list snapshot at 40 cols 1`] = `
"[Tasks]   Archive                       
                                        
>                                       
──────────────────────┬─────────────────
ID          STATUS    PRI TITLE         
                 │ Preview              
──────────────────────┼─────────────────
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
──────────────────────┴─────────────────
0/0 tasks  ↑↓: navigate  Tab: switch  En"
`;

exports[`render snapshots > empty task list snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    PRI TITLE                          │ Preview              
────────────────────────────────────────────┼───────────────────────────────────
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
0/0 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`render snapshots > empty task list snapshot at 120 cols 1`] = `
"[Tasks]   Archive                                                                                                       
                                                                                                                        
>                                                                                                                       
──────────────────────────────────────────────────────────────────┬─────────────────────────────────────────────────────
ID          STATUS    PRI          TITLE                          │ Preview                                             
──────────────────────────────────────────────────────────────────┼─────────────────────────────────────────────────────
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
──────────────────────────────────────────────────────────────────┴─────────────────────────────────────────────────────
0/0 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search                                          "
`;

exports[`render snapshots > epic grouping snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    PRI TITLE                          │ Preview              
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo      ⏹️  Auth epic                      │ MRKL-001 feat todo    
├─MRKL-002    in-progre…⏹️  Login page                     │   ⏹️ Priority: 3-norm
al                                                                              
├─MRKL-003    todo      ⏹️  Token refresh                  │ Auth epic           
MRKL-004    done      ⏹️  Fix CI pipeline                │                       
MRKL-005    todo      ⏹️  Update README                  │ Relationships         
                                            │   Children: MRKL-002, MRKL-003    
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`render snapshots > scroll offset snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    PRI TITLE                          │ Preview              
────────────────────────────────────────────┼───────────────────────────────────
MRKL-004    todo      ⏹️  Task number 4                  │ MRKL-006 chore done   
MRKL-005    in-progre…⏹️  Task number 5                  │   ⏹️ Priority: 3-normal
MRKL-006    done      ⏹️  Task number 6                  │ Task number 6         
MRKL-007    todo      ⏹️  Task number 7                  │                       
MRKL-008    in-progre…⏹️  Task number 8                  │                       
MRKL-009    done      ⏹️  Task number 9                  │                       
MRKL-010    todo      ⏹️  Task number 10                 │                       
MRKL-011    in-progre…⏹️  Task number 11                 │                       
MRKL-012    done      ⏹️  Task number 12                 │                       
MRKL-013    todo      ⏹️  Task number 13                 │                       
MRKL-014    in-progre…⏹️  Task number 14                 │                       
MRKL-015    done      ⏹️  Task number 15                 │                       
MRKL-016    todo      ⏹️  Task number 16                 │                       
MRKL-017    in-progre…⏹️  Task number 17                 │                       
MRKL-018    done      ⏹️  Task number 18                 │                       
────────────────────────────────────────────┴───────────────────────────────────
20/20 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search"
`;

exports[`render snapshots > title truncation snapshot at 40 cols 1`] = `
"[Tasks]   Archive                       
                                        
>                                       
──────────────────────┬─────────────────
ID          STATUS    PRI TITLE         
                 │ Preview              
──────────────────────┼─────────────────
MRKL-001    todo      ⏹️  Implement user 
authentication… │ MRKL-001 feat todo    
MRKL-002    in-progre…⏹️  Fix critical pr
oduction datab… │   ⏹️ Priority: 3-normal
MRKL-003    done      ⏹️  Refactor legacy
 notification … │ Implement user authent
ication with OAuth2 and SAML            
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 "
`;
